réglement du bug avec un hotfix

--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
       laboriosam, fuga veniam dignissimos omnis. Dolorum, accusantium! Tenetur,
       voluptates reprehenderit?
     </p>
+    <!--stimulation d'un hot fix-->
   </body>
 </html>
